Update `date` (`date +%s`)

--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <html>
-	<head>
-		<title>Plugwise Core/beta progress</title>
-	</head>
-	<body>
-		<p>Various active branch differences</p>
-		<ul>
-			<li><a href="diff.html">Unified diff core:dev vs beta:master</a></li>
-			<li><a href="diff_switch-group.html">Unified diff core:dev vs beta:switch-group</a></li>
+        <head>
+                <title>Plugwise Core/beta progress</title>
+        </head>
+        <body>
+                <p>Active beta-branch vs active HA-core differences</p>
+                <ul>
+                        <li><a href='diff.html'>Unified diff core:dev vs beta:master</a></li>
+
 		</ul>
-	</body>
+                <p>Branch differences (still in beta)</p>
+                <ul>
+ 
+                        <li><a href='diff_switch-group.html'>Unified diff core:dev vs beta:switch-group</a></li>
+
+		</ul>
+                <p>Various PR branch differences (upstreaming)</p>
+                <ul>
+ 
+                        <li><a href='diff_plugwise-testing.html'>Unified diff core:dev vs pw-core:plugwise-testing</a></li>
+ 
+                        <li><a href='diff_plugwise-config_options.html'>Unified diff core:dev vs pw-core:plugwise-config_options</a></li>
+
+                </ul>
+        </body>
 </html>
