Update `date` (`date +%s`)

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
                 <title>Plugwise Core/beta progress</title>
         </head>
         <body>
+
                 <p>Active beta-branch vs active HA-core differences</p>
                 <ul>
                         <li><a href='diff.html'>Unified diff core:dev vs beta:master</a></li>
@@ -20,10 +21,10 @@
                         <li><a href='diff_plugwise-testing.html'>Unified diff core:dev vs pw-core:plugwise-testing</a></li>
  
                         <li><a href='diff_plugwise-config_options.html'>Unified diff core:dev vs pw-core:plugwise-config_options</a></li>
-
-                </ul>
-        </body>
-</html>
+ 
+                        <li><a href='diff_plugwise-notifications.html'>Unified diff core:dev vs pw-core:plugwise-notifications</a></li>
+ 
+                        <li><a href='diff_plugwise-uniqid_and_port.html'>Unified diff core:dev vs pw-core:plugwise-uniqid_and_port</a></li>
 
                 </ul>
         </body>
