Update `date` (`date +%s`)

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
                 <ul>
  
                         <li><a href='diff_switch-group.html'>Unified diff core:dev vs beta:switch-group</a></li>
+ 
+                        <li><a href='diff_uniqfix.html'>Unified diff core:dev vs beta:uniqfix</a></li>
+ 
+                        <li><a href='diff_refit_103.html'>Unified diff core:dev vs beta:refit_103</a></li>
 
 		</ul>
                 <p>Various PR branch differences (upstreaming)</p>
@@ -21,10 +25,6 @@
                         <li><a href='diff_plugwise-notifications.html'>Unified diff core:dev vs pw-core:plugwise-notifications</a></li>
  
                         <li><a href='diff_plugwise-uniqid_and_port.html'>Unified diff core:dev vs pw-core:plugwise-uniqid_and_port</a></li>
-
-                </ul>
-        </body>
-</html>
 
                 </ul>
         </body>
