--- a/index.html
+++ b/index.html
@@ -22,13 +22,9 @@
                 <p>Various PR branch differences (upstreaming)</p>
                 <ul>
  
-                        <li><a href='diff_plugwise-notifications.html'>Unified diff core:dev vs pw-core:plugwise-notifications</a></li>
+                        <li><a href='diff_plugwise-notifications.html'>Unified diff core:dev vs pw-core:plugwise-notifications</a> - <a href='plugwise-notifications.md'>PR suggested text</a></li>
  
-                        <li><a href='diff_plugwise-uniqid_and_port.html'>Unified diff core:dev vs pw-core:plugwise-uniqid_and_port</a></li>
-
-                </ul>
-        </body>
-</html>
+                        <li><a href='diff_plugwise-uniqid_and_port.html'>Unified diff core:dev vs pw-core:plugwise-uniqid_and_port</a> - <a href='plugwise-uniqid_and_port.md'>PR suggested text</a></li>
 
                 </ul>
         </body>
