Update `date` (`date +%s`)

--- a/index.html
+++ b/index.html
@@ -24,11 +24,9 @@
  
                         <li><a href='diff_plugwise-notifications.html'>Unified diff core:dev vs pw-core:plugwise-notifications</a> - <a href='https://github.com/plugwise/progress/blob/master/notifications.md'>PR suggested text</a></li>
  
-                        <li><a href='diff_plugwise-uniqid_and_port.html'>Unified diff core:dev vs pw-core:plugwise-uniqid_and_port</a> - <a href='https://github.com/plugwise/progress/blob/master/uniqid_and_port.md'>PR suggested text</a></li>
-
-                </ul>
-        </body>
-</html>
+                        <li><a href='diff_plugwise-uniq.html'>Unified diff core:dev vs pw-core:plugwise-uniq</a> - <a href='https://github.com/plugwise/progress/blob/master/uniq.md'>PR suggested text</a></li>
+ 
+                        <li><a href='diff_plugwise-port.html'>Unified diff core:dev vs pw-core:plugwise-port</a> - <a href='https://github.com/plugwise/progress/blob/master/port.md'>PR suggested text</a></li>
 
                 </ul>
         </body>
