--- a/index.html
+++ b/index.html
@@ -22,15 +22,11 @@
                 <p>Various PR branch differences (upstreaming)</p>
                 <ul>
  
-                        <li><a href='diff_plugwise-notifications.html'>Unified diff core:dev vs pw-core:plugwise-notifications</a> - <a href='https://github.com/plugwise/progress/blob/master/notifications.md'>PR suggested text</a></li>
+                        <li><a href='diff_plugwise-notifications.html'>Unified diff core:dev vs pw-core:plugwise-notifications</a> - <a href='https://github.com/plugwise/progress/blob/master/notifications.md'>PR suggested text</a> - <a href='https://github.com/plugwise/home-assistant.core/pull/new/plugwise-notifications'>Create PR@Core</a></li>
  
-                        <li><a href='diff_plugwise-uniq.html'>Unified diff core:dev vs pw-core:plugwise-uniq</a> - <a href='https://github.com/plugwise/progress/blob/master/uniq.md'>PR suggested text</a></li>
+                        <li><a href='diff_plugwise-uniq.html'>Unified diff core:dev vs pw-core:plugwise-uniq</a> - <a href='https://github.com/plugwise/progress/blob/master/uniq.md'>PR suggested text</a> - <a href='https://github.com/plugwise/home-assistant.core/pull/new/plugwise-uniq'>Create PR@Core</a></li>
  
-                        <li><a href='diff_plugwise-port.html'>Unified diff core:dev vs pw-core:plugwise-port</a> - <a href='https://github.com/plugwise/progress/blob/master/port.md'>PR suggested text</a></li>
-
-                </ul>
-        </body>
-</html>
+                        <li><a href='diff_plugwise-port.html'>Unified diff core:dev vs pw-core:plugwise-port</a> - <a href='https://github.com/plugwise/progress/blob/master/port.md'>PR suggested text</a> - <a href='https://github.com/plugwise/home-assistant.core/pull/new/plugwise-port'>Create PR@Core</a></li>
 
                 </ul>
         </body>
