Update `date` (`date +%s`)

--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
  
                         <li><a href='diff_plugwise-port.html'>Unified diff core:dev vs pw-core:plugwise-port</a> - <a href='https://github.com/plugwise/progress/blob/master/port.md'>PR suggested text</a> - <a href='https://github.com/plugwise/home-assistant.core/pull/new/plugwise-port'>Create PR@Core</a></li>
 
-                </ul>
-        </body>
-</html>
-
+			<p>(Don't forget to click the 'PR suggested text' first (in raw) so you can copy it to the 'Create PR@core' link :)<p>
                 </ul>
         </body>
 </html>
