Update `date` (`date +%s`)

--- a/index.html
+++ b/index.html
@@ -22,17 +22,15 @@
                 <p>Various PR branch differences (upstreaming)</p>
                 <ul>
  
-                        <li><a href='diff_plugwise-notifications.html'>Unified diff core:dev vs pw-core:plugwise-notifications</a> - <a href='https://github.com/plugwise/progress/blob/master/notifications.md'>PR suggested text</a> (<a href='https://raw.githubusercontent.com/plugwise/progress/master/notifications.md'>raw</a>) - <a href='https://github.com/plugwise/home-assistant.core/pull/new/plugwise-notifications'>Create PR@Core</a></li>
+                        <li><a href='diff_plugwise-notifications.html'>Unified diff core:dev vs pw-core:plugwise-notifications</a> - <a href='https://github.com/plugwise/progress/blob/master/notifications.md'>PR suggested text</a> (<a href='https://raw.githubusercontent.com/plugwise/progress/master/notifications.md'>raw</a>) - <a href='https://github.com/home-assistant/core/compare/dev...plugwise:plugwise-plugwise-notifications?expand=1'>Create PR@Core</a></li>
  
-                        <li><a href='diff_plugwise-uniq.html'>Unified diff core:dev vs pw-core:plugwise-uniq</a> - <a href='https://github.com/plugwise/progress/blob/master/uniq.md'>PR suggested text</a> (<a href='https://raw.githubusercontent.com/plugwise/progress/master/uniq.md'>raw</a>) - <a href='https://github.com/plugwise/home-assistant.core/pull/new/plugwise-uniq'>Create PR@Core</a></li>
+                        <li><a href='diff_plugwise-uniq.html'>Unified diff core:dev vs pw-core:plugwise-uniq</a> - <a href='https://github.com/plugwise/progress/blob/master/uniq.md'>PR suggested text</a> (<a href='https://raw.githubusercontent.com/plugwise/progress/master/uniq.md'>raw</a>) - <a href='https://github.com/home-assistant/core/compare/dev...plugwise:plugwise-plugwise-uniq?expand=1'>Create PR@Core</a></li>
  
-                        <li><a href='diff_plugwise-port.html'>Unified diff core:dev vs pw-core:plugwise-port</a> - <a href='https://github.com/plugwise/progress/blob/master/port.md'>PR suggested text</a> (<a href='https://raw.githubusercontent.com/plugwise/progress/master/port.md'>raw</a>) - <a href='https://github.com/plugwise/home-assistant.core/pull/new/plugwise-port'>Create PR@Core</a></li>
+                        <li><a href='diff_plugwise-port.html'>Unified diff core:dev vs pw-core:plugwise-port</a> - <a href='https://github.com/plugwise/progress/blob/master/port.md'>PR suggested text</a> (<a href='https://raw.githubusercontent.com/plugwise/progress/master/port.md'>raw</a>) - <a href='https://github.com/home-assistant/core/compare/dev...plugwise:plugwise-plugwise-port?expand=1'>Create PR@Core</a></li>
+ 
+                        <li><a href='diff_plugwise-stretch.html'>Unified diff core:dev vs pw-core:plugwise-stretch</a> - <a href='https://github.com/plugwise/progress/blob/master/stretch.md'>PR suggested text</a> (<a href='https://raw.githubusercontent.com/plugwise/progress/master/stretch.md'>raw</a>) - <a href='https://github.com/home-assistant/core/compare/dev...plugwise:plugwise-plugwise-stretch?expand=1'>Create PR@Core</a></li>
 
 			<p>(Don't forget to click the 'PR suggested text' first (in raw) so you can copy it to the 'Create PR@core' link :)<p>
-                </ul>
-        </body>
-</html>
-
                 </ul>
         </body>
 </html>
