Update `date` (`date +%s`)

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <li><a href='diff_refit_103.html'>Unified diff core:dev vs beta:refit_103</a></li>
 
 		</ul>
-                <p>Various PR branch differences (upstreaming)</p>
+                <p>Various PR branch differences against Core (dev/upstreaming)</p>
                 <ul>
  
                         <li><a href='diff_plugwise-notifications.html'>Unified diff core:dev vs pw-core:plugwise-notifications</a> - <a href='https://github.com/plugwise/progress/blob/master/notifications.md'>PR suggested text</a> (<a href='https://raw.githubusercontent.com/plugwise/progress/master/notifications.md'>raw</a>) - <a href='https://github.com/home-assistant/core/compare/dev...plugwise:plugwise-plugwise-notifications?expand=1'>Create PR@Core</a></li>
@@ -32,8 +32,18 @@
 
 			<p>(Don't forget to click the 'PR suggested text' first (in raw) so you can copy it to the 'Create PR@core' link :)<p>
                 </ul>
-        </body>
-</html>
+
+		</ul>
+                <p>Various PR branch differences against -beta master (downstreaming/verify)</p>
+                <ul>
+ 
+                        <li><a href='bm_diff_plugwise-notifications.html'>Unified diff beta:master vs pw-core:plugwise-notifications</a></li>
+ 
+                        <li><a href='bm_diff_plugwise-uniq.html'>Unified diff beta:master vs pw-core:plugwise-uniq</a></li>
+ 
+                        <li><a href='bm_diff_plugwise-port.html'>Unified diff beta:master vs pw-core:plugwise-port</a></li>
+ 
+                        <li><a href='bm_diff_plugwise-stretch.html'>Unified diff beta:master vs pw-core:plugwise-stretch</a></li>
 
                 </ul>
         </body>
