--- a/index.html
+++ b/index.html
@@ -12,19 +12,13 @@
                 <p>Branch differences (still in beta)</p>
                 <ul>
  
-                        <li><a href='diff_switch-group.html'>Unified diff core:dev vs beta:switch-group</a></li>
- 
-                        <li><a href='diff_uniqfix.html'>Unified diff core:dev vs beta:uniqfix</a></li>
- 
-                        <li><a href='diff_refit_103.html'>Unified diff core:dev vs beta:refit_103</a></li>
+                        <li><a href='diff_line_up_with_core.html'>Unified diff core:dev vs beta:line_up_with_core</a></li>
 
 		</ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
                 <ul>
  
                         <li><a href='diff_plugwise-notifications.html'>Unified diff core:dev vs pw-core:plugwise-notifications</a> - <a href='https://github.com/plugwise/progress/blob/master/notifications.md'>PR suggested text</a> (<a href='https://raw.githubusercontent.com/plugwise/progress/master/notifications.md'>raw</a>) - <a href='https://github.com/home-assistant/core/compare/dev...plugwise:plugwise-plugwise-notifications?expand=1'>Create PR@Core</a></li>
- 
-                        <li><a href='diff_plugwise-stretch.html'>Unified diff core:dev vs pw-core:plugwise-stretch</a> - <a href='https://github.com/plugwise/progress/blob/master/stretch.md'>PR suggested text</a> (<a href='https://raw.githubusercontent.com/plugwise/progress/master/stretch.md'>raw</a>) - <a href='https://github.com/home-assistant/core/compare/dev...plugwise:plugwise-plugwise-stretch?expand=1'>Create PR@Core</a></li>
 
 			<p>(Don't forget to click the 'PR suggested text' first (in raw) so you can copy it to the 'Create PR@core' link :)<p>
                 </ul>
@@ -34,8 +28,6 @@
                 <ul>
  
                         <li><a href='bm_diff_plugwise-notifications.html'>Unified diff beta:master vs pw-core:plugwise-notifications</a></li>
- 
-                        <li><a href='bm_diff_plugwise-stretch.html'>Unified diff beta:master vs pw-core:plugwise-stretch</a></li>
 
                 </ul>
         </body>
