Update `date` (`date +%s`)

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                         <li><a href='diff_plugwise-stretch.html'>Unified diff core:dev vs pw-core:plugwise-stretch</a> - <a href='https://github.com/plugwise/progress/blob/master/stretch.md'>PR suggested text</a> (<a href='https://raw.githubusercontent.com/plugwise/progress/master/stretch.md'>raw</a>) - <a href='https://github.com/home-assistant/core/compare/dev...plugwise:plugwise-plugwise-stretch?expand=1'>Create PR@Core</a></li>
  
                         <li><a href='diff_plugwise-smallfixes.html'>Unified diff core:dev vs pw-core:plugwise-smallfixes</a> - <a href='https://github.com/plugwise/progress/blob/master/smallfixes.md'>PR suggested text</a> (<a href='https://raw.githubusercontent.com/plugwise/progress/master/smallfixes.md'>raw</a>) - <a href='https://github.com/home-assistant/core/compare/dev...plugwise:plugwise-plugwise-smallfixes?expand=1'>Create PR@Core</a></li>
+ 
+                        <li><a href='diff_plugwise-split.html'>Unified diff core:dev vs pw-core:plugwise-split</a> - <a href='https://github.com/plugwise/progress/blob/master/split.md'>PR suggested text</a> (<a href='https://raw.githubusercontent.com/plugwise/progress/master/split.md'>raw</a>) - <a href='https://github.com/home-assistant/core/compare/dev...plugwise:plugwise-plugwise-split?expand=1'>Create PR@Core</a></li>
 
 			<p>(Don't forget to click the 'PR suggested text' first (in raw) so you can copy it to the 'Create PR@core' link :)<p>
                 </ul>
@@ -36,6 +38,8 @@
                         <li><a href='bm_diff_plugwise-stretch.html'>Unified diff beta:master vs pw-core:plugwise-stretch</a></li>
  
                         <li><a href='bm_diff_plugwise-smallfixes.html'>Unified diff beta:master vs pw-core:plugwise-smallfixes</a></li>
+ 
+                        <li><a href='bm_diff_plugwise-split.html'>Unified diff beta:master vs pw-core:plugwise-split</a></li>
 
                 </ul>
         </body>
