Update `date` (`date +%s`)

--- a/index.html
+++ b/index.html
@@ -8,26 +8,25 @@
                 <ul>
                         <li><a href='diff.html'>Unified diff core:dev vs beta:master</a></li>
 
-                </ul>
+		</ul>
                 <p>Branch differences (still in beta)</p>
                 <ul>
-
+ 
                         <li><a href='diff_line_up_with_core.html'>Unified diff core:dev vs beta:line_up_with_core</a></li>
 
-                </ul>
+		</ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
                 <ul>
+ 
+                        <li><a href='diff_plugwise-notifications plugwise-codeowner.html'>Unified diff core:dev vs pw-core:plugwise-notifications plugwise-codeowner</a> - <a href='https://github.com/plugwise/progress/blob/master/notifications plugwise-codeowner.md'>PR suggested text</a> (<a href='https://raw.githubusercontent.com/plugwise/progress/master/notifications plugwise-codeowner.md'>raw</a>) - <a href='https://github.com/home-assistant/core/compare/dev...plugwise:plugwise-plugwise-notifications plugwise-codeowner?expand=1'>Create PR@Core</a></li>
 
-                        <li><a href='diff_plugwise-notifications plugwise-codeowner.html'>Unified diff core:dev vs pw-core:plugwise-notifications plugwise-codeowner</a> - <a href='https://github.com/plugwise/progress/blob/master/notifications plugwise-codeowner.md'>PR suggested text</a> (<a href='https://raw.githu
-busercontent.com/plugwise/progress/master/notifications plugwise-codeowner.md'>raw</a>) - <a href='https://github.com/home-assistant/core/compare/dev...plugwise:plugwise-plugwise-notifications plugwise-codeowner?expand=1'>Create PR@Core</a></li>
-
-                        <p>(Don't forget to click the 'PR suggested text' first (in raw) so you can copy it to the 'Create PR@core' link :)<p>
+			<p>(Don't forget to click the 'PR suggested text' first (in raw) so you can copy it to the 'Create PR@core' link :)<p>
                 </ul>
 
-                </ul>
+		</ul>
                 <p>Various PR branch differences against -beta master (downstreaming/verify)</p>
                 <ul>
-
+ 
                         <li><a href='bm_diff_plugwise-notifications plugwise-codeowner.html'>Unified diff beta:master vs pw-core:plugwise-notifications plugwise-codeowner</a></li>
 
                 </ul>
