Update: master - Diff report completed

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <ul>
 
                         <li><a href='diff_plugwise-notifications.html'>Unified diff core:dev vs pw-core:plugwise-notifications</a> - <a href='https://github.com/plugwise/progress/blob/master/notifications.md'>PR suggested text</a> (<a href='https://raw.githu
-busercontent.com/plugwise/progress/master/notifications.md'>raw</a>) - <a href='https://github.com/home-assistant/core/compare/dev...plugwise:plugwise-plugwise-notifications?expand=1'>Create PR@Core</a></li>
+busercontent.com/plugwise/progress/master/notifications.md'>raw</a>) - <a href='https://github.com/home-assistant/core/compare/dev...plugwise:plugwise-notifications?expand=1'>Create PR@Core</a></li>
 
                         <li><a href='diff_plugwise-codeowner.html'>Unified diff core:dev vs pw-core:plugwise-codeowner</a> - <a href='https://github.com/plugwise/progress/blob/master/codeowner.md'>PR suggested text</a> (<a href='https://raw.githu
-busercontent.com/plugwise/progress/master/codeowner.md'>raw</a>) - <a href='https://github.com/home-assistant/core/compare/dev...plugwise:plugwise-plugwise-codeowner?expand=1'>Create PR@Core</a></li>
+busercontent.com/plugwise/progress/master/codeowner.md'>raw</a>) - <a href='https://github.com/home-assistant/core/compare/dev...plugwise:plugwise-codeowner?expand=1'>Create PR@Core</a></li>
 
                         <p>(Don't forget to click the 'PR suggested text' first (in raw) so you can copy it to the 'Create PR@core' link :)<p>
                 </ul>
