--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
                         <li><a href='diff_plugwise-notifications.html'>Unified diff core:dev vs pw-core:plugwise-notifications</a> - <a href='https://github.com/plugwise/progress/blob/master/notifications.md'>PR suggested text</a> (<a href='https://raw.githu
 busercontent.com/plugwise/progress/master/notifications.md'>raw</a>) - <a href='https://github.com/home-assistant/core/compare/dev...plugwise:plugwise-notifications?expand=1'>Create PR@Core</a></li>
 
-                        <li><a href='diff_plugwise-codeowner.html'>Unified diff core:dev vs pw-core:plugwise-codeowner</a> - <a href='https://github.com/plugwise/progress/blob/master/codeowner.md'>PR suggested text</a> (<a href='https://raw.githu
-busercontent.com/plugwise/progress/master/codeowner.md'>raw</a>) - <a href='https://github.com/home-assistant/core/compare/dev...plugwise:plugwise-codeowner?expand=1'>Create PR@Core</a></li>
+                        <li><a href='diff_plugwise-module.html'>Unified diff core:dev vs pw-core:plugwise-module</a> - <a href='https://github.com/plugwise/progress/blob/master/module.md'>PR suggested text</a> (<a href='https://raw.githu
+busercontent.com/plugwise/progress/master/module.md'>raw</a>) - <a href='https://github.com/home-assistant/core/compare/dev...plugwise:plugwise-module?expand=1'>Create PR@Core</a></li>
+
+                        <li><a href='diff_plugwise-usb.html'>Unified diff core:dev vs pw-core:plugwise-usb</a> - <a href='https://github.com/plugwise/progress/blob/master/usb.md'>PR suggested text</a> (<a href='https://raw.githu
+busercontent.com/plugwise/progress/master/usb.md'>raw</a>) - <a href='https://github.com/home-assistant/core/compare/dev...plugwise:plugwise-usb?expand=1'>Create PR@Core</a></li>
 
                         <p>(Don't forget to click the 'PR suggested text' first (in raw) so you can copy it to the 'Create PR@core' link :)<p>
                 </ul>
@@ -33,7 +36,9 @@ busercontent.com/plugwise/progress/master/codeowner.md'>raw</a>) - <a href='http
 
                         <li><a href='bm_diff_plugwise-notifications.html'>Unified diff beta:master vs pw-core:plugwise-notifications</a></li>
 
-                        <li><a href='bm_diff_plugwise-codeowner.html'>Unified diff beta:master vs pw-core:plugwise-codeowner</a></li>
+                        <li><a href='bm_diff_plugwise-module.html'>Unified diff beta:master vs pw-core:plugwise-module</a></li>
+
+                        <li><a href='bm_diff_plugwise-usb.html'>Unified diff beta:master vs pw-core:plugwise-usb</a></li>
 
                 </ul>
         </body>
